api--file-sys-cli/Parser/filesyscli_parser.go
// Code generated from FileSysCLI.g4 by ANTLR 4.13.1. DO NOT EDIT.

package Parser // FileSysCLI
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type FileSysCLIParser struct {
	*antlr.BaseParser
}

var FileSysCLIParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func filesyscliParserInit() {
	staticData := &FileSysCLIParserStaticData
	staticData.LiteralNames = []string{
		"", "'execute'", "'mkdisk'", "'rmdisk'", "'fdisk'", "'mount'", "'unmount'",
		"'mkfs'", "'login'", "'logout'", "'mkgrp'", "'rmgrp'", "'mkusr'", "'rmusr'",
		"'mkfile'", "'rep'", "'cat'", "'remove'", "'edit'", "'rename'", "'mkdir'",
		"'pause'", "'chgrp'", "'move'", "'loss'", "'recovery'", "'chown'", "'chmod'",
		"'='",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "ENBLANCO", "LINE_COMMENT",
		"STRING", "QUOTED_TEXT_",
	}
	staticData.RuleNames = []string{
		"commands", "command", "execute", "mkdisk", "rmdisk", "fdisk", "mount",
		"unmount", "mkfs", "login", "logout", "mkgrp", "rmgrp", "mkusr", "rmusr",
		"mkfile", "rep", "cat", "remove", "edit", "rename", "mkdir", "pause",
		"chgrp", "move", "loss", "recovery", "chown", "chmod", "parametro",
		"value_parametro",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// FileSysCLIParserInit initializes any static state used to implement FileSysCLIParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewFileSysCLIParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func FileSysCLIParserInit() {
	staticData := &FileSysCLIParserStaticData
	staticData.once.Do(filesyscliParserInit)
}

// NewFileSysCLIParser produces a new parser instance for the optional input antlr.TokenStream.
func NewFileSysCLIParser(input antlr.TokenStream) *FileSysCLIParser {
	FileSysCLIParserInit()
	this := new(FileSysCLIParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &FileSysCLIParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "FileSysCLI.g4"

	return this
}

// FileSysCLIParser tokens.
const (
	FileSysCLIParserEOF          = antlr.TokenEOF
	FileSysCLIParserT__0         = 1
	FileSysCLIParserT__1         = 2
	FileSysCLIParserT__2         = 3
	FileSysCLIParserT__3         = 4
	FileSysCLIParserT__4         = 5
	FileSysCLIParserT__5         = 6
	FileSysCLIParserT__6         = 7
	FileSysCLIParserT__7         = 8
	FileSysCLIParserT__8         = 9
	FileSysCLIParserT__9         = 10
	FileSysCLIParserT__10        = 11
	FileSysCLIParserT__11        = 12
	FileSysCLIParserT__12        = 13
	FileSysCLIParserT__13        = 14
	FileSysCLIParserT__14        = 15
	FileSysCLIParserT__15        = 16
	FileSysCLIParserT__16        = 17
	FileSysCLIParserT__17        = 18
	FileSysCLIParserT__18        = 19
	FileSysCLIParserT__19        = 20
	FileSysCLIParserT__20        = 21
	FileSysCLIParserT__21        = 22
	FileSysCLIParserT__22        = 23
	FileSysCLIParserT__23        = 24
	FileSysCLIParserT__24        = 25
	FileSysCLIParserT__25        = 26
	FileSysCLIParserT__26        = 27
	FileSysCLIParserT__27        = 28
	FileSysCLIParserENBLANCO     = 29
	FileSysCLIParserLINE_COMMENT = 30
	FileSysCLIParserSTRING       = 31
	FileSysCLIParserQUOTED_TEXT_ = 32
)

// FileSysCLIParser rules.
const (
	FileSysCLIParserRULE_commands        = 0
	FileSysCLIParserRULE_command         = 1
	FileSysCLIParserRULE_execute         = 2
	FileSysCLIParserRULE_mkdisk          = 3
	FileSysCLIParserRULE_rmdisk          = 4
	FileSysCLIParserRULE_fdisk           = 5
	FileSysCLIParserRULE_mount           = 6
	FileSysCLIParserRULE_unmount         = 7
	FileSysCLIParserRULE_mkfs            = 8
	FileSysCLIParserRULE_login           = 9
	FileSysCLIParserRULE_logout          = 10
	FileSysCLIParserRULE_mkgrp           = 11
	FileSysCLIParserRULE_rmgrp           = 12
	FileSysCLIParserRULE_mkusr           = 13
	FileSysCLIParserRULE_rmusr           = 14
	FileSysCLIParserRULE_mkfile          = 15
	FileSysCLIParserRULE_rep             = 16
	FileSysCLIParserRULE_cat             = 17
	FileSysCLIParserRULE_remove          = 18
	FileSysCLIParserRULE_edit            = 19
	FileSysCLIParserRULE_rename          = 20
	FileSysCLIParserRULE_mkdir           = 21
	FileSysCLIParserRULE_pause           = 22
	FileSysCLIParserRULE_chgrp           = 23
	FileSysCLIParserRULE_move            = 24
	FileSysCLIParserRULE_loss            = 25
	FileSysCLIParserRULE_recovery        = 26
	FileSysCLIParserRULE_chown           = 27
	FileSysCLIParserRULE_chmod           = 28
	FileSysCLIParserRULE_parametro       = 29
	FileSysCLIParserRULE_value_parametro = 30
)

// ICommandsContext is an interface to support dynamic dispatch.
type ICommandsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllCommand() []ICommandContext
	Command(i int) ICommandContext

	// IsCommandsContext differentiates from other interfaces.
	IsCommandsContext()
}

type CommandsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommandsContext() *CommandsContext {
	var p = new(CommandsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FileSysCLIParserRULE_commands
	return p
}

func InitEmptyCommandsContext(p *CommandsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FileSysCLIParserRULE_commands
}

func (*CommandsContext) IsCommandsContext() {}

func NewCommandsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandsContext {
	var p = new(CommandsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FileSysCLIParserRULE_commands

	return p
}

func (s *CommandsContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandsContext) EOF() antlr.TerminalNode {
	return s.GetToken(FileSysCLIParserEOF, 0)
}

func (s *CommandsContext) AllCommand() []ICommandContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICommandContext); ok {
			len++
		}
	}

	tst := make([]ICommandContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICommandContext); ok {
			tst[i] = t.(ICommandContext)
			i++
		}
	}

	return tst
}

func (s *CommandsContext) Command(i int) ICommandContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandContext)
}

func (s *CommandsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CommandsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FileSysCLIVisitor:
		return t.VisitCommands(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FileSysCLIParser) Commands() (localctx ICommandsContext) {
	localctx = NewCommandsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FileSysCLIParserRULE_commands)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&268435454) != 0 {
		{
			p.SetState(62)
			p.Command()
		}

		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(68)
		p.Match(FileSysCLIParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICommandContext is an interface to support dynamic dispatch.
type ICommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Mkdisk() IMkdiskContext
	Rmdisk() IRmdiskContext
	Fdisk() IFdiskContext
	Execute() IExecuteContext
	Mount() IMountContext
	Unmount() IUnmountContext
	Mkfs() IMkfsContext
	Login() ILoginContext
	Logout() ILogoutContext
	Mkgrp() IMkgrpContext
	Rmgrp() IRmgrpContext
	Mkusr() IMkusrContext
	Rmusr() IRmusrContext
	Mkfile() IMkfileContext
	Cat() ICatContext
	Remove() IRemoveContext
	Edit() IEditContext
	Rename() IRenameContext
	Mkdir() IMkdirContext
	Chgrp() IChgrpContext
	Rep() IRepContext
	Move() IMoveContext
	Loss() ILossContext
	Recovery() IRecoveryContext
	Chown() IChownContext
	Chmod() IChmodContext
	Pause() IPauseContext

	// IsCommandContext differentiates from other interfaces.
	IsCommandContext()
}

type CommandContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommandContext() *CommandContext {
	var p = new(CommandContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FileSysCLIParserRULE_command
	return p
}

func InitEmptyCommandContext(p *CommandContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FileSysCLIParserRULE_command
}

func (*CommandContext) IsCommandContext() {}

func NewCommandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandContext {
	var p = new(CommandContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FileSysCLIParserRULE_command

	return p
}

func (s *CommandContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandContext) Mkdisk() IMkdiskContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMkdiskContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMkdiskContext)
}

func (s *CommandContext) Rmdisk() IRmdiskContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRmdiskContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRmdiskContext)
}

func (s *CommandContext) Fdisk() IFdiskContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFdiskContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFdiskContext)
}

func (s *CommandContext) Execute() IExecuteContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExecuteContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExecuteContext)
}

func (s *CommandContext) Mount() IMountContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMountContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMountContext)
}

func (s *CommandContext) Unmount() IUnmountContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUnmountContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUnmountContext)
}

func (s *CommandContext) Mkfs() IMkfsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMkfsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMkfsContext)
}

func (s *CommandContext) Login() ILoginContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILoginContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILoginContext)
}

func (s *CommandContext) Logout() ILogoutContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILogoutContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILogoutContext)
}

func (s *CommandContext) Mkgrp() IMkgrpContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMkgrpContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMkgrpContext)
}

func (s *CommandContext) Rmgrp() IRmgrpContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRmgrpContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRmgrpContext)
}

func (s *CommandContext) Mkusr() IMkusrContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMkusrContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMkusrContext)
}

func (s *CommandContext) Rmusr() IRmusrContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRmusrContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRmusrContext)
}

func (s *CommandContext) Mkfile() IMkfileContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMkfileContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMkfileContext)
}

func (s *CommandContext) Cat() ICatContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICatContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICatContext)
}

func (s *CommandContext) Remove() IRemoveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRemoveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRemoveContext)
}

func (s *CommandContext) Edit() IEditContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEditContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEditContext)
}

func (s *CommandContext) Rename() IRenameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRenameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRenameContext)
}

func (s *CommandContext) Mkdir() IMkdirContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMkdirContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMkdirContext)
}

func (s *CommandContext) Chgrp() IChgrpContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IChgrpContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IChgrpContext)
}

func (s *CommandContext) Rep() IRepContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRepContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRepContext)
}

func (s *CommandContext) Move() IMoveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMoveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMoveContext)
}

func (s *CommandContext) Loss() ILossContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILossContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILossContext)
}

func (s *CommandContext) Recovery() IRecoveryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRecoveryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRecoveryContext)
}

func (s *CommandContext) Chown() IChownContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IChownContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IChownContext)
}

func (s *CommandContext) Chmod() IChmodContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IChmodContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IChmodContext)
}

func (s *CommandContext) Pause() IPauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPauseContext)
}

func (s *CommandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CommandContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FileSysCLIVisitor:
		return t.VisitCommand(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FileSysCLIParser) Command() (localctx ICommandContext) {
	localctx = NewCommandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FileSysCLIParserRULE_command)
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case FileSysCLIParserT__1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(70)
			p.Mkdisk()
		}

	case FileSysCLIParserT__2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(71)
			p.Rmdisk()
		}

	case FileSysCLIParserT__3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(72)
			p.Fdisk()
		}

	case FileSysCLIParserT__0:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(73)
			p.Execute()
		}

	case FileSysCLIParserT__4:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(74)
			p.Mount()
		}

	case FileSysCLIParserT__5:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(75)
			p.Unmount()
		}

	case FileSysCLIParserT__6:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(76)
			p.Mkfs()
		}

	case FileSysCLIParserT__7:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(77)
			p.Login()
		}

	case FileSysCLIParserT__8:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(78)
			p.Logout()
		}

	case FileSysCLIParserT__9:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(79)
			p.Mkgrp()
		}

	case FileSysCLIParserT__10:
		p.EnterOuterAlt(localctx, 11)
		{
			p.SetState(80)
			p.Rmgrp()
		}

	case FileSysCLIParserT__11:
		p.EnterOuterAlt(localctx, 12)
		{
			p.SetState(81)
			p.Mkusr()
		}

	case FileSysCLIParserT__12:
		p.EnterOuterAlt(localctx, 13)
		{
			p.SetState(82)
			p.Rmusr()
		}

	case FileSysCLIParserT__13:
		p.EnterOuterAlt(localctx, 14)
		{
			p.SetState(83)
			p.Mkfile()
		}

	case FileSysCLIParserT__15:
		p.EnterOuterAlt(localctx, 15)
		{
			p.SetState(84)
			p.Cat()
		}

	case FileSysCLIParserT__16:
		p.EnterOuterAlt(localctx, 16)
		{
			p.SetState(85)
			p.Remove()
		}

	case FileSysCLIParserT__17:
		p.EnterOuterAlt(localctx, 17)
		{
			p.SetState(86)
			p.Edit()
		}

	case FileSysCLIParserT__18:
		p.EnterOuterAlt(localctx, 18)
		{
			p.SetState(87)
			p.Rename()
		}

	case FileSysCLIParserT__19:
		p.EnterOuterAlt(localctx, 19)
		{
			p.SetState(88)
			p.Mkdir()
		}

	case FileSysCLIParserT__21:
		p.EnterOuterAlt(localctx, 20)
		{
			p.SetState(89)
			p.Chgrp()
		}

	case FileSysCLIParserT__14:
		p.EnterOuterAlt(localctx, 21)
		{
			p.SetState(90)
			p.Rep()
		}

	case FileSysCLIParserT__22:
		p.EnterOuterAlt(localctx, 22)
		{
			p.SetState(91)
			p.Move()
		}

	case FileSysCLIParserT__23:
		p.EnterOuterAlt(localctx, 23)
		{
			p.SetState(92)
			p.Loss()
		}

	case FileSysCLIParserT__24:
		p.EnterOuterAlt(localctx, 24)
		{
			p.SetState(93)
			p.Recovery()
		}

	case FileSysCLIParserT__25:
		p.EnterOuterAlt(localctx, 25)
		{
			p.SetState(94)
			p.Chown()
		}

	case FileSysCLIParserT__26:
		p.EnterOuterAlt(localctx, 26)
		{
			p.SetState(95)
			p.Chmod()
		}

	case FileSysCLIParserT__20:
		p.EnterOuterAlt(localctx, 27)
		{
			p.SetState(96)
			p.Pause()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExecuteContext is an interface to support dynamic dispatch.
type IExecuteContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsExecuteContext differentiates from other interfaces.
	IsExecuteContext()
}

type ExecuteContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExecuteContext() *ExecuteContext {
	var p = new(ExecuteContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FileSysCLIParserRULE_execute
	return p
}

func InitEmptyExecuteContext(p *ExecuteContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FileSysCLIParserRULE_execute
}

func (*ExecuteContext) IsExecuteContext() {}

func NewExecuteContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExecuteContext {
	var p = new(ExecuteContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FileSysCLIParserRULE_execute

	return p
}

func (s *ExecuteContext) GetParser() antlr.Parser { return s.parser }

func (s *ExecuteContext) CopyAll(ctx *ExecuteContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *ExecuteContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExecuteContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type Command_executeContext struct {
	ExecuteContext
}

func NewCommand_executeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Command_executeContext {
	var p = new(Command_executeContext)

	InitEmptyExecuteContext(&p.ExecuteContext)
	p.parser = parser
	p.CopyAll(ctx.(*ExecuteContext))

	return p
}

func (s *Command_executeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Command_executeContext) AllParametro() []IParametroContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IParametroContext); ok {
			len++
		}
	}

	tst := make([]IParametroContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IParametroContext); ok {
			tst[i] = t.(IParametroContext)
			i++
		}
	}

	return tst
}

func (s *Command_executeContext) Parametro(i int) IParametroContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParametroContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParametroContext)
}

func (s *Command_executeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FileSysCLIVisitor:
		return t.VisitCommand_execute(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FileSysCLIParser) Execute() (localctx IExecuteContext) {
	localctx = NewExecuteContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, FileSysCLIParserRULE_execute)
	var _la int

	localctx = NewCommand_executeContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(99)
		p.Match(FileSysCLIParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(103)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == FileSysCLIParserQUOTED_TEXT_ {
		{
			p.SetState(100)
			p.Parametro()
		}

		p.SetState(105)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}
